--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rhythm Games & Songs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nope app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
